testcases/semantic_error/layout_missing_field.shp
class Main<p1> where
    p1: [Main<p1>]
{
    f1: i32;
    f2: i32;
}

layout Foo: Main = rec{f1};
